<resources>
    <string name="app_name">NurulAfiqah_Tut1b</string>
    <string name="but1_name">BUT1</string>
    <string name="but2_name">BUT2</string>
    <string name="but3_name">BUT3</string>
    <string name="but4_name">BUT4</string>
    <string name="but5_name">BUT5</string>
    <string name="but6_name">BUT6</string>
    <string name="but7_name">BUT7</string>
    <string name="but8_name">BUT8</string>
</resources>
